// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`f-utility vs. ramda [ENV: debug] 1`] = `
Array [
  "isArray",
  "freeze",
  "round",
  "box",
  "constant",
  "first",
  "jam",
  "mash",
  "mode",
  "smash",
  "smooth",
  "temper",
  "sideEffect",
  "binarySideEffect",
  "trace",
  "inspect",
  "def",
  "isBoolean",
  "isFunction",
  "isNumber",
  "isRawObject",
  "isString",
  "isSymbol",
  "isUndefined",
  "isUnmatched",
  "toJSON",
  "j2",
  "isObject",
  "pathIs",
  "I",
  "K",
  "entries",
  "every",
  "fromEntries",
  "sideEffect2",
  "some",
  "custom",
]
`;

exports[`f-utility vs. ramda [ENV: default] 1`] = `
Array [
  "isArray",
  "freeze",
  "round",
  "box",
  "constant",
  "first",
  "jam",
  "mash",
  "mode",
  "smash",
  "smooth",
  "temper",
  "sideEffect",
  "binarySideEffect",
  "trace",
  "inspect",
  "def",
  "isBoolean",
  "isFunction",
  "isNumber",
  "isRawObject",
  "isString",
  "isSymbol",
  "isUndefined",
  "isUnmatched",
  "toJSON",
  "j2",
  "isObject",
  "pathIs",
  "I",
  "K",
  "entries",
  "every",
  "fromEntries",
  "sideEffect2",
  "some",
  "custom",
]
`;

exports[`f-utility vs. ramda [ENV: production] 1`] = `
Array [
  "isArray",
  "freeze",
  "round",
  "box",
  "constant",
  "first",
  "jam",
  "mash",
  "mode",
  "smash",
  "smooth",
  "temper",
  "sideEffect",
  "binarySideEffect",
  "trace",
  "inspect",
  "def",
  "isBoolean",
  "isFunction",
  "isNumber",
  "isRawObject",
  "isString",
  "isSymbol",
  "isUndefined",
  "isUnmatched",
  "toJSON",
  "j2",
  "isObject",
  "pathIs",
  "I",
  "K",
  "entries",
  "every",
  "fromEntries",
  "sideEffect2",
  "some",
]
`;

exports[`ramda vs. f-utility [ENV: debug] 1`] = `
Array [
  "__",
  "aperture",
  "applySpec",
  "applyTo",
  "ascend",
  "assocPath",
  "binary",
  "clamp",
  "clone",
  "comparator",
  "compose",
  "composeK",
  "composeP",
  "composeWith",
  "construct",
  "constructN",
  "contains",
  "converge",
  "countBy",
  "defaultTo",
  "descend",
  "differenceWith",
  "dissocPath",
  "drop",
  "dropLast",
  "dropLastWhile",
  "dropRepeats",
  "dropRepeatsWith",
  "dropWhile",
  "empty",
  "endsWith",
  "eqBy",
  "eqProps",
  "evolve",
  "findIndex",
  "findLast",
  "findLastIndex",
  "forEachObjIndexed",
  "groupBy",
  "groupWith",
  "has",
  "hasIn",
  "hasPath",
  "head",
  "identical",
  "indexBy",
  "indexOf",
  "innerJoin",
  "insert",
  "insertAll",
  "intersection",
  "intersperse",
  "into",
  "invert",
  "invertObj",
  "invoker",
  "isEmpty",
  "isNil",
  "juxt",
  "keysIn",
  "lastIndexOf",
  "lens",
  "lensIndex",
  "lensPath",
  "lensProp",
  "lift",
  "liftN",
  "mapAccum",
  "mapAccumRight",
  "mapObjIndexed",
  "match",
  "mathMod",
  "maxBy",
  "mergeDeepLeft",
  "mergeDeepRight",
  "mergeDeepWith",
  "mergeDeepWithKey",
  "mergeLeft",
  "mergeWith",
  "mergeWithKey",
  "minBy",
  "modulo",
  "move",
  "nAry",
  "negate",
  "none",
  "nthArg",
  "o",
  "objOf",
  "of",
  "omit",
  "once",
  "otherwise",
  "over",
  "pair",
  "partial",
  "partialRight",
  "partition",
  "pick",
  "pickAll",
  "pickBy",
  "pipeK",
  "pipeP",
  "pipeWith",
  "product",
  "project",
  "props",
  "reduceBy",
  "reduceRight",
  "reduceWhile",
  "reduced",
  "remove",
  "repeat",
  "replace",
  "scan",
  "sequence",
  "set",
  "sortBy",
  "sortWith",
  "splitAt",
  "splitEvery",
  "splitWhen",
  "startsWith",
  "sum",
  "symmetricDifferenceWith",
  "take",
  "takeLast",
  "takeLastWhile",
  "takeWhile",
  "tap",
  "test",
  "then",
  "times",
  "toPairsIn",
  "toString",
  "transduce",
  "transpose",
  "traverse",
  "trim",
  "tryCatch",
  "type",
  "unapply",
  "unary",
  "uncurryN",
  "unfold",
  "unionWith",
  "uniqBy",
  "uniqWith",
  "unnest",
  "until",
  "useWith",
  "values",
  "valuesIn",
  "view",
  "where",
  "whereEq",
  "without",
  "xprod",
  "zip",
  "zipObj",
  "zipWith",
  "thunkify",
]
`;

exports[`ramda vs. f-utility [ENV: default] 1`] = `
Array [
  "__",
  "aperture",
  "applySpec",
  "applyTo",
  "ascend",
  "assocPath",
  "binary",
  "clamp",
  "clone",
  "comparator",
  "compose",
  "composeK",
  "composeP",
  "composeWith",
  "construct",
  "constructN",
  "contains",
  "converge",
  "countBy",
  "defaultTo",
  "descend",
  "differenceWith",
  "dissocPath",
  "drop",
  "dropLast",
  "dropLastWhile",
  "dropRepeats",
  "dropRepeatsWith",
  "dropWhile",
  "empty",
  "endsWith",
  "eqBy",
  "eqProps",
  "evolve",
  "findIndex",
  "findLast",
  "findLastIndex",
  "forEachObjIndexed",
  "groupBy",
  "groupWith",
  "has",
  "hasIn",
  "hasPath",
  "head",
  "identical",
  "indexBy",
  "indexOf",
  "innerJoin",
  "insert",
  "insertAll",
  "intersection",
  "intersperse",
  "into",
  "invert",
  "invertObj",
  "invoker",
  "isEmpty",
  "isNil",
  "juxt",
  "keysIn",
  "lastIndexOf",
  "lens",
  "lensIndex",
  "lensPath",
  "lensProp",
  "lift",
  "liftN",
  "mapAccum",
  "mapAccumRight",
  "mapObjIndexed",
  "match",
  "mathMod",
  "maxBy",
  "mergeDeepLeft",
  "mergeDeepRight",
  "mergeDeepWith",
  "mergeDeepWithKey",
  "mergeLeft",
  "mergeWith",
  "mergeWithKey",
  "minBy",
  "modulo",
  "move",
  "nAry",
  "negate",
  "none",
  "nthArg",
  "o",
  "objOf",
  "of",
  "omit",
  "once",
  "otherwise",
  "over",
  "pair",
  "partial",
  "partialRight",
  "partition",
  "pick",
  "pickAll",
  "pickBy",
  "pipeK",
  "pipeP",
  "pipeWith",
  "product",
  "project",
  "props",
  "reduceBy",
  "reduceRight",
  "reduceWhile",
  "reduced",
  "remove",
  "repeat",
  "replace",
  "scan",
  "sequence",
  "set",
  "sortBy",
  "sortWith",
  "splitAt",
  "splitEvery",
  "splitWhen",
  "startsWith",
  "sum",
  "symmetricDifferenceWith",
  "take",
  "takeLast",
  "takeLastWhile",
  "takeWhile",
  "tap",
  "test",
  "then",
  "times",
  "toPairsIn",
  "toString",
  "transduce",
  "transpose",
  "traverse",
  "trim",
  "tryCatch",
  "type",
  "unapply",
  "unary",
  "uncurryN",
  "unfold",
  "unionWith",
  "uniqBy",
  "uniqWith",
  "unnest",
  "until",
  "useWith",
  "values",
  "valuesIn",
  "view",
  "where",
  "whereEq",
  "without",
  "xprod",
  "zip",
  "zipObj",
  "zipWith",
  "thunkify",
]
`;

exports[`ramda vs. f-utility [ENV: production] 1`] = `
Array [
  "__",
  "aperture",
  "applySpec",
  "applyTo",
  "ascend",
  "assocPath",
  "binary",
  "clamp",
  "clone",
  "comparator",
  "compose",
  "composeK",
  "composeP",
  "composeWith",
  "construct",
  "constructN",
  "contains",
  "converge",
  "countBy",
  "defaultTo",
  "descend",
  "differenceWith",
  "dissocPath",
  "drop",
  "dropLast",
  "dropLastWhile",
  "dropRepeats",
  "dropRepeatsWith",
  "dropWhile",
  "empty",
  "endsWith",
  "eqBy",
  "eqProps",
  "evolve",
  "findIndex",
  "findLast",
  "findLastIndex",
  "forEachObjIndexed",
  "groupBy",
  "groupWith",
  "has",
  "hasIn",
  "hasPath",
  "head",
  "identical",
  "indexBy",
  "indexOf",
  "innerJoin",
  "insert",
  "insertAll",
  "intersection",
  "intersperse",
  "into",
  "invert",
  "invertObj",
  "invoker",
  "isEmpty",
  "isNil",
  "juxt",
  "keysIn",
  "lastIndexOf",
  "lens",
  "lensIndex",
  "lensPath",
  "lensProp",
  "lift",
  "liftN",
  "mapAccum",
  "mapAccumRight",
  "mapObjIndexed",
  "match",
  "mathMod",
  "maxBy",
  "mergeDeepLeft",
  "mergeDeepRight",
  "mergeDeepWith",
  "mergeDeepWithKey",
  "mergeLeft",
  "mergeWith",
  "mergeWithKey",
  "minBy",
  "modulo",
  "move",
  "nAry",
  "negate",
  "none",
  "nthArg",
  "o",
  "objOf",
  "of",
  "omit",
  "once",
  "otherwise",
  "over",
  "pair",
  "partial",
  "partialRight",
  "partition",
  "pick",
  "pickAll",
  "pickBy",
  "pipeK",
  "pipeP",
  "pipeWith",
  "product",
  "project",
  "props",
  "reduceBy",
  "reduceRight",
  "reduceWhile",
  "reduced",
  "remove",
  "repeat",
  "replace",
  "scan",
  "sequence",
  "set",
  "sortBy",
  "sortWith",
  "splitAt",
  "splitEvery",
  "splitWhen",
  "startsWith",
  "sum",
  "symmetricDifferenceWith",
  "take",
  "takeLast",
  "takeLastWhile",
  "takeWhile",
  "tap",
  "test",
  "then",
  "times",
  "toPairsIn",
  "toString",
  "transduce",
  "transpose",
  "traverse",
  "trim",
  "tryCatch",
  "type",
  "unapply",
  "unary",
  "uncurryN",
  "unfold",
  "unionWith",
  "uniqBy",
  "uniqWith",
  "unnest",
  "until",
  "useWith",
  "values",
  "valuesIn",
  "view",
  "where",
  "whereEq",
  "without",
  "xprod",
  "zip",
  "zipObj",
  "zipWith",
  "thunkify",
]
`;

exports[`snapshot [ENV: debug] 1`] = `
Array [
  "isArray",
  "keys",
  "freeze",
  "round",
  "F",
  "T",
  "adjust",
  "append",
  "assoc",
  "dissoc",
  "box",
  "call",
  "complement",
  "constant",
  "dec",
  "first",
  "fromPairs",
  "identity",
  "inc",
  "jam",
  "last",
  "init",
  "tail",
  "length",
  "mash",
  "mean",
  "mode",
  "memoizeWith",
  "not",
  "pipe",
  "prepend",
  "reverse",
  "smash",
  "smooth",
  "temper",
  "toLower",
  "toPairs",
  "toUpper",
  "update",
  "sideEffect",
  "binarySideEffect",
  "trace",
  "inspect",
  "def",
  "curry",
  "curryN",
  "is",
  "isBoolean",
  "isFunction",
  "isNumber",
  "isRawObject",
  "isString",
  "isSymbol",
  "isUndefined",
  "isUnmatched",
  "gt",
  "gte",
  "lt",
  "lte",
  "and",
  "equals",
  "or",
  "subtract",
  "add",
  "divide",
  "multiply",
  "all",
  "any",
  "filter",
  "find",
  "forEach",
  "includes",
  "min",
  "max",
  "ap",
  "concat",
  "map",
  "cond",
  "apply",
  "nth",
  "range",
  "join",
  "sort",
  "split",
  "toJSON",
  "both",
  "either",
  "reduce",
  "slice",
  "ifElse",
  "j2",
  "addIndex",
  "bind",
  "flip",
  "when",
  "unless",
  "flatten",
  "chain",
  "reject",
  "uniq",
  "median",
  "isObject",
  "union",
  "difference",
  "symmetricDifference",
  "anyPass",
  "allPass",
  "pathOr",
  "path",
  "pathEq",
  "pathSatisfies",
  "pathIs",
  "propOr",
  "prop",
  "propEq",
  "propSatisfies",
  "propIs",
  "pluck",
  "I",
  "K",
  "always",
  "entries",
  "every",
  "fromEntries",
  "merge",
  "mergeAll",
  "mergeRight",
  "sideEffect2",
  "some",
  "custom",
]
`;

exports[`snapshot [ENV: default] 1`] = `
Array [
  "isArray",
  "keys",
  "freeze",
  "round",
  "F",
  "T",
  "adjust",
  "append",
  "assoc",
  "dissoc",
  "box",
  "call",
  "complement",
  "constant",
  "dec",
  "first",
  "fromPairs",
  "identity",
  "inc",
  "jam",
  "last",
  "init",
  "tail",
  "length",
  "mash",
  "mean",
  "mode",
  "memoizeWith",
  "not",
  "pipe",
  "prepend",
  "reverse",
  "smash",
  "smooth",
  "temper",
  "toLower",
  "toPairs",
  "toUpper",
  "update",
  "sideEffect",
  "binarySideEffect",
  "trace",
  "inspect",
  "def",
  "curry",
  "curryN",
  "is",
  "isBoolean",
  "isFunction",
  "isNumber",
  "isRawObject",
  "isString",
  "isSymbol",
  "isUndefined",
  "isUnmatched",
  "gt",
  "gte",
  "lt",
  "lte",
  "and",
  "equals",
  "or",
  "subtract",
  "add",
  "divide",
  "multiply",
  "all",
  "any",
  "filter",
  "find",
  "forEach",
  "includes",
  "min",
  "max",
  "ap",
  "concat",
  "map",
  "cond",
  "apply",
  "nth",
  "range",
  "join",
  "sort",
  "split",
  "toJSON",
  "both",
  "either",
  "reduce",
  "slice",
  "ifElse",
  "j2",
  "addIndex",
  "bind",
  "flip",
  "when",
  "unless",
  "flatten",
  "chain",
  "reject",
  "uniq",
  "median",
  "isObject",
  "union",
  "difference",
  "symmetricDifference",
  "anyPass",
  "allPass",
  "pathOr",
  "path",
  "pathEq",
  "pathSatisfies",
  "pathIs",
  "propOr",
  "prop",
  "propEq",
  "propSatisfies",
  "propIs",
  "pluck",
  "I",
  "K",
  "always",
  "entries",
  "every",
  "fromEntries",
  "merge",
  "mergeAll",
  "mergeRight",
  "sideEffect2",
  "some",
  "custom",
]
`;

exports[`snapshot [ENV: production] 1`] = `
Array [
  "isArray",
  "keys",
  "freeze",
  "round",
  "F",
  "T",
  "adjust",
  "append",
  "box",
  "call",
  "complement",
  "constant",
  "dec",
  "assoc",
  "dissoc",
  "first",
  "fromPairs",
  "identity",
  "inc",
  "jam",
  "tail",
  "init",
  "last",
  "length",
  "mash",
  "mean",
  "mode",
  "not",
  "pipe",
  "prepend",
  "reverse",
  "smash",
  "smooth",
  "temper",
  "toLower",
  "toPairs",
  "toUpper",
  "update",
  "sideEffect",
  "binarySideEffect",
  "trace",
  "inspect",
  "memoizeWith",
  "def",
  "curry",
  "curryN",
  "is",
  "isBoolean",
  "isFunction",
  "isNumber",
  "isRawObject",
  "isString",
  "isSymbol",
  "isUndefined",
  "isUnmatched",
  "gt",
  "gte",
  "lt",
  "lte",
  "and",
  "equals",
  "or",
  "subtract",
  "add",
  "divide",
  "multiply",
  "all",
  "any",
  "filter",
  "find",
  "forEach",
  "includes",
  "max",
  "min",
  "apply",
  "ap",
  "concat",
  "map",
  "join",
  "cond",
  "nth",
  "range",
  "sort",
  "split",
  "toJSON",
  "both",
  "either",
  "reduce",
  "slice",
  "ifElse",
  "j2",
  "addIndex",
  "bind",
  "flip",
  "when",
  "unless",
  "flatten",
  "chain",
  "reject",
  "uniq",
  "isObject",
  "median",
  "union",
  "difference",
  "symmetricDifference",
  "anyPass",
  "allPass",
  "pathOr",
  "path",
  "pathEq",
  "pathSatisfies",
  "pathIs",
  "propOr",
  "prop",
  "propEq",
  "propSatisfies",
  "propIs",
  "pluck",
  "I",
  "K",
  "always",
  "entries",
  "every",
  "fromEntries",
  "merge",
  "mergeAll",
  "mergeRight",
  "sideEffect2",
  "some",
]
`;

exports[`v3 vs. v4 [ENV: debug] 1`] = `Array []`;

exports[`v3 vs. v4 [ENV: default] 1`] = `Array []`;

exports[`v3 vs. v4 [ENV: production] 1`] = `Array []`;

exports[`v4 vs. v3 [ENV: debug] 1`] = `
Array [
  "isArray",
  "keys",
  "freeze",
  "round",
  "F",
  "T",
  "adjust",
  "append",
  "assoc",
  "dissoc",
  "box",
  "call",
  "complement",
  "constant",
  "dec",
  "first",
  "fromPairs",
  "identity",
  "inc",
  "jam",
  "last",
  "init",
  "tail",
  "length",
  "mash",
  "mean",
  "mode",
  "memoizeWith",
  "not",
  "pipe",
  "prepend",
  "reverse",
  "smash",
  "smooth",
  "temper",
  "toLower",
  "toPairs",
  "toUpper",
  "update",
  "sideEffect",
  "binarySideEffect",
  "trace",
  "inspect",
  "def",
  "curry",
  "curryN",
  "is",
  "isBoolean",
  "isFunction",
  "isNumber",
  "isRawObject",
  "isString",
  "isSymbol",
  "isUndefined",
  "isUnmatched",
  "gt",
  "gte",
  "lt",
  "lte",
  "and",
  "equals",
  "or",
  "subtract",
  "add",
  "divide",
  "multiply",
  "all",
  "any",
  "filter",
  "find",
  "forEach",
  "includes",
  "min",
  "max",
  "ap",
  "concat",
  "map",
  "cond",
  "apply",
  "nth",
  "range",
  "join",
  "sort",
  "split",
  "toJSON",
  "both",
  "either",
  "reduce",
  "slice",
  "ifElse",
  "j2",
  "addIndex",
  "bind",
  "flip",
  "when",
  "unless",
  "flatten",
  "chain",
  "reject",
  "uniq",
  "median",
  "isObject",
  "union",
  "difference",
  "symmetricDifference",
  "anyPass",
  "allPass",
  "pathOr",
  "path",
  "pathEq",
  "pathSatisfies",
  "pathIs",
  "propOr",
  "prop",
  "propEq",
  "propSatisfies",
  "propIs",
  "pluck",
  "I",
  "K",
  "always",
  "entries",
  "every",
  "fromEntries",
  "merge",
  "mergeAll",
  "mergeRight",
  "sideEffect2",
  "some",
  "custom",
]
`;

exports[`v4 vs. v3 [ENV: default] 1`] = `
Array [
  "isArray",
  "keys",
  "freeze",
  "round",
  "F",
  "T",
  "adjust",
  "append",
  "assoc",
  "dissoc",
  "box",
  "call",
  "complement",
  "constant",
  "dec",
  "first",
  "fromPairs",
  "identity",
  "inc",
  "jam",
  "last",
  "init",
  "tail",
  "length",
  "mash",
  "mean",
  "mode",
  "memoizeWith",
  "not",
  "pipe",
  "prepend",
  "reverse",
  "smash",
  "smooth",
  "temper",
  "toLower",
  "toPairs",
  "toUpper",
  "update",
  "sideEffect",
  "binarySideEffect",
  "trace",
  "inspect",
  "def",
  "curry",
  "curryN",
  "is",
  "isBoolean",
  "isFunction",
  "isNumber",
  "isRawObject",
  "isString",
  "isSymbol",
  "isUndefined",
  "isUnmatched",
  "gt",
  "gte",
  "lt",
  "lte",
  "and",
  "equals",
  "or",
  "subtract",
  "add",
  "divide",
  "multiply",
  "all",
  "any",
  "filter",
  "find",
  "forEach",
  "includes",
  "min",
  "max",
  "ap",
  "concat",
  "map",
  "cond",
  "apply",
  "nth",
  "range",
  "join",
  "sort",
  "split",
  "toJSON",
  "both",
  "either",
  "reduce",
  "slice",
  "ifElse",
  "j2",
  "addIndex",
  "bind",
  "flip",
  "when",
  "unless",
  "flatten",
  "chain",
  "reject",
  "uniq",
  "median",
  "isObject",
  "union",
  "difference",
  "symmetricDifference",
  "anyPass",
  "allPass",
  "pathOr",
  "path",
  "pathEq",
  "pathSatisfies",
  "pathIs",
  "propOr",
  "prop",
  "propEq",
  "propSatisfies",
  "propIs",
  "pluck",
  "I",
  "K",
  "always",
  "entries",
  "every",
  "fromEntries",
  "merge",
  "mergeAll",
  "mergeRight",
  "sideEffect2",
  "some",
  "custom",
]
`;

exports[`v4 vs. v3 [ENV: production] 1`] = `
Array [
  "isArray",
  "keys",
  "freeze",
  "round",
  "F",
  "T",
  "adjust",
  "append",
  "box",
  "call",
  "complement",
  "constant",
  "dec",
  "assoc",
  "dissoc",
  "first",
  "fromPairs",
  "identity",
  "inc",
  "jam",
  "tail",
  "init",
  "last",
  "length",
  "mash",
  "mean",
  "mode",
  "not",
  "pipe",
  "prepend",
  "reverse",
  "smash",
  "smooth",
  "temper",
  "toLower",
  "toPairs",
  "toUpper",
  "update",
  "sideEffect",
  "binarySideEffect",
  "trace",
  "inspect",
  "memoizeWith",
  "def",
  "curry",
  "curryN",
  "is",
  "isBoolean",
  "isFunction",
  "isNumber",
  "isRawObject",
  "isString",
  "isSymbol",
  "isUndefined",
  "isUnmatched",
  "gt",
  "gte",
  "lt",
  "lte",
  "and",
  "equals",
  "or",
  "subtract",
  "add",
  "divide",
  "multiply",
  "all",
  "any",
  "filter",
  "find",
  "forEach",
  "includes",
  "max",
  "min",
  "apply",
  "ap",
  "concat",
  "map",
  "join",
  "cond",
  "nth",
  "range",
  "sort",
  "split",
  "toJSON",
  "both",
  "either",
  "reduce",
  "slice",
  "ifElse",
  "j2",
  "addIndex",
  "bind",
  "flip",
  "when",
  "unless",
  "flatten",
  "chain",
  "reject",
  "uniq",
  "isObject",
  "median",
  "union",
  "difference",
  "symmetricDifference",
  "anyPass",
  "allPass",
  "pathOr",
  "path",
  "pathEq",
  "pathSatisfies",
  "pathIs",
  "propOr",
  "prop",
  "propEq",
  "propSatisfies",
  "propIs",
  "pluck",
  "I",
  "K",
  "always",
  "entries",
  "every",
  "fromEntries",
  "merge",
  "mergeAll",
  "mergeRight",
  "sideEffect2",
  "some",
]
`;
